imgui.ini main.cpp

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,8 +1,12 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=0,0
 Size=400,400
 
 [Window][Connect4]
+Pos=0,0
+Size=1264,761
+
+[Window][Gave over]
 Pos=0,0
 Size=1920,1017
 
